# Dyver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_essentials.sh  cmake_setup.sh  deps.sh
cv/: 3d.py  CRAB.py
src/: amp_distribution.cpp  amp_distribution.h  app.cpp  app.h  arm.cpp  arm.h  bindable_action.cpp  bindable_action.h  denseutils.h  main.cpp  rov.cpp  rov.h  servo.h  thruster.h  utils.h
src/cv/: 3d.py  CRAB.py
src/geometry/: rectprism.h  shape.h
src/networking/: socket_helper.cpp  socket_helper.h
src/networking/client/: nwclient.h
src/networking/server/: nwserver.h
src/physics/: body.h  shape.h  simulation.cpp  simulation.h
src/test/: CMakeLists.txt  test  test.cpp  test.h
src/thruster/: thruster.h
src/ui/: Button.cpp  Button.h  Rectangle.h  UI.h  Window.h  button.h  cam.cpp  camera.cpp  camera.h  rectangle..h  widget.h
